...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="325dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/search_background"
                android:drawableStart="@android:drawable/ic_menu_search"
...
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="#E0E0E0" />

        <!-- RecyclerView for Events -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/events_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical" />

    </LinearLayout>
...
