...
            android:id="@+id/join_button_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/go_to_event_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spots_row">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/join_waitlist_button"
                android:layout_width="match_parent"
...
